--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<p class="bello center">Games you can play with us and by your self</bello class="bello">
 		</div>
 		<div class="col-sm-4">
-			<img src="tower.jpg">
+			<img src="tower.jpg" id="container_2">
 			<h1 class="bimg">Images</h1>
 			<p class="bello center">Games you can play with us and by your self</bello class="bello">
 		</div>
