--- a/html.html
+++ b/html.html
@@ -11,7 +11,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 	<!-- Latest compiled JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="java.js">
 	</script>
 </head>
@@ -24,8 +24,7 @@
 			</div>
 		
 		<ul class="nav navbar-nav">
-			<li class="active"><a href="#">Home</a></li>
-			<li><a href="#">Games</a></li>
+			<li class="active"><a href="#">Games</a></li>
 			<li><a href="#">Pictures</a></li>
 			<li><a href="#">Random Stuff</a></li>
 			<li><a href="#">Coming Soon!</a></li>
