--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script
 	<script src="java.js">
 	</script>
-</head>
-
-<body>
 	<nav class="navbar navbar-fixed-top navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header">
@@ -24,14 +21,16 @@
 			</div>
 		
 		<ul class="nav navbar-nav">
-			<li class="active"><a href="#">Home</a></li>
-			<li><a href="#">Games</a></li>
+			<li><a href="games.html">Games</a></li>
 			<li><a href="#">Pictures</a></li>
 			<li><a href="#">Random Stuff</a></li>
 			<li><a href="#">Coming Soon!</a></li>
 		</ul>
 		</div>
 	</nav>
+</head>
+
+<body>
 	<div class="toped">
 		<img class="himg" src="20171211_121422.jpg">
 		<div class="centered">
@@ -54,19 +53,19 @@
 	</div>
 	<div style="padding-top: 1%;" class="row center container-fluid">
 		<div class="col-sm-4">
-			<img src="20180420_200112.jpg">
+			<a href="games.html"><img src="rgame.jpg" class="img-thumbnail"></a>
 			<h1 class="bimg">Games</h1>
 			<p class="bello center">Games you can play with us and by your self</bello class="bello">
 		</div>
 		<div class="col-sm-4">
-			<img src="tower.jpg" id="container_2">
-			<h1 class="bimg">Images</h1>
-			<p class="bello center">Games you can play with us and by your self</bello class="bello">
-		</div>
-		<div class="col-sm-4">
-			<img src="20180420_200112.jpg">
+			<a href="#"><img src="dice.jpg" class="img-thumbnail"></a>
 			<h1 class="bimg">Random Stuff</h1>
 			<p class="bello center">hi</bello class="bello">
+		</div>
+		<div class="col-sm-4">
+			<a href="games.html"><img src="rben.jpg" class="img-thumbnail"></a>
+			<h1 class="bimg">Images</h1>
+			<p class="bello center">Games you can play with us and by your self</bello class="bello">
 		</div>
 	</div>
 
