--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 	<!-- Latest compiled JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="java.js">
 	</script>
 	<nav class="navbar navbar-fixed-top navbar-inverse">
@@ -22,9 +22,9 @@
 		
 		<ul class="nav navbar-nav">
 			<li><a href="games.html">Games</a></li>
-			<li><a href="#">Pictures</a></li>
-			<li><a href="#">Random Stuff</a></li>
-			<li><a href="#">Coming Soon!</a></li>
+			<li><a href="images.html">Pictures</a></li>
+			<li><a href="random.html">Random Stuff</a></li>
+			<li><a href="soon.html">Coming Soon!</a></li>
 		</ul>
 		</div>
 	</nav>
