--- a/games.html
+++ b/games.html
@@ -14,24 +14,95 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="java.js">
 	</script>
-</head>
-
-<body>
 	<nav class="navbar navbar-fixed-top navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#">Home</a>
+				<a class="navbar-brand" href="index.html">Home</a>
 			</div>
 		
-		<ul class="nav navbar-nav">
-			<li class="active"><a href="#">Games</a></li>
-			<li><a href="#">Pictures</a></li>
-			<li><a href="#">Random Stuff</a></li>
-			<li><a href="#">Coming Soon!</a></li>
+		<ul class="nav navbar-nav container-fluid">
+			<li class="active"><a href="games.html">Games</a></li>
+			<li><a href="images.html">Pictures</a></li>
+			<li><a href="random.html">Random Stuff</a></li>
+			<li><a href="soon.html">Coming Soon!</a></li>
 		</ul>
 		</div>
 	</nav>
+</head>
 
+<body class="obody">
+
+	<div class="row center container-fluid">
+		<div class="col-sm-4">
+			<h1 class="header">
+				Multiplayer Games
+			</h1>
+			<hr class="shr">
+			<div class="topped">
+			<div class="col-sm-4">
+				<p>
+					Singleplayer Games
+				</p>
+			</div>
+			<div class="col-sm-4">
+				<p>
+					Games I Made
+				</p>
+			</div>
+			<div class="col-sm-4">
+				<p>
+					test
+				</p>
+			</div>
+			</div>
+		</div>
+		<div class="col-sm-4">
+			<h1 class="header">
+				Singleplayer Games
+			</h1>
+			<hr class="shr">
+			<div class="topped">
+			<div class="col-sm-4">
+				<p>
+					Singleplayer Games
+				</p>
+			</div>
+			<div class="col-sm-4">
+				<p>
+					Games I Made
+				</p>
+			</div>
+			<div class="col-sm-4">
+				<p>
+					test
+				</p>
+			</div>
+			</div>
+		</div>
+		<div class="col-sm-4">
+			<h1 class="header">
+				Games I Made
+			</h1>
+			<hr class="shr">
+				<div class="topped">
+				<div class="col-sm-4">
+					<p>
+						Singleplayer Games
+					</p>
+				</div>
+				<div class="col-sm-4">
+					<p>
+						Mobile Games
+					</p>
+				</div>
+				<div class="col-sm-4">
+					<p>
+						test
+					</p>
+				</div>
+				</div>
+			</div>
+	</div>
 
 
 </body>
