--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 			<p class="bello center">Games you can play with us and by your self</bello class="bello">
 		</div>
 		<div class="col-sm-4">
-			<a href="#"><img src="dice.jpg" class="img-thumbnail"></a>
+			<a href="random.html"><img src="dice.jpg" class="img-thumbnail"></a>
 			<h1 class="bimg">Random Stuff</h1>
 			<p class="bello center">hi</bello class="bello">
 		</div>
 		<div class="col-sm-4">
-			<a href="games.html"><img src="rben.jpg" class="img-thumbnail"></a>
+			<a href="images.html"><img src="rben.jpg" class="img-thumbnail"></a>
 			<h1 class="bimg">Images</h1>
 			<p class="bello center">Games you can play with us and by your self</bello class="bello">
 		</div>
