--- a/images.html
+++ b/images.html
@@ -24,6 +24,7 @@
 		<ul class="nav navbar-nav container-fluid">
 			<li><a href="games.html">Games</a></li>
 			<li class="active"><a href="images.html">Pictures</a></li>
+			<li><a href="time.html">Timer</a></li>
 			<li><a href="random.html">Random Stuff</a></li>
 			<li><a href="soon.html">Coming Soon!</a></li>
 		</ul>
@@ -33,61 +34,112 @@
 
 <body class="obody">
 
-	<div class="row center">
+
+	<div class="headers">
+		<h1 class="padlower">
+			Pictures of The Fam From My Phone
+		</h1>
+	</div>
+	
+	<div class="container">
+			<div class="row">
+				<div class="col-sm-4">
+					<img src="olive.jpg" class="rotate90">
+					<p class="stext" style="padding-top: 30%;">
+						Mathew
+					</p>
+				</div>
+				<div class="col-sm-4">
+					<img src="sakina.jpg" class="rotate90">
+					<p class="stext" style="padding-top: 30%;">
+						Sakina
+					</p>
+				</div>
+				<div class="col-sm-4">
+					<img src="potato.jpg" style="width: 60%;height: 60%;margin-left: 25%;">
+					<p class="stext" style="padding-top: 10%;">
+						Ben
+					</p>
+				</div>
+				</div>
+			</div>
+
+	<div class="headers">
+		<h1 class="topped">
+			More Pictures
+		</h1>
+	</div>
+
+	<div class="container">
+	<div class="row">
 		<div class="col-sm-3">
-			<h1 class="header">
-				test
-			</h1>
 			<img src="mat.jpg" class="rotate90">
 		</div>
 		<div class="col-sm-3">
-			<h1 class="header">
-				test
-			</h1>
 			<img src="mat2.jpg" class="rotate90">
 		</div>
 		<div class="col-sm-3">
-			<h1 class="header">
-				test
-			</h1>
 			<img src="mat3.jpg" class="rotate90">
 		</div>
 		<div class="col-sm-3">
-			<h1 class="header">
-				test
-			</h1>
 			<img src="matbest.jpg" class="rotate90">
 		</div>
 
-		<div class="row center">
+
+
+		</div>
+	</div>
+
+	<div class="container" style="padding-top: 10%">
+		<div class="row">
 			<div class="col-sm-3">
-				<h1 class="header">
-					test
-				</h1>
+				<img src="fear6.jpg" class="rotate90">
+			</div>
+			<div class="col-sm-3">
 				<img src="tower.jpg" class="rotate90">
 			</div>
 			<div class="col-sm-3">
-				<h1 class="header">
-					test
-				</h1>
 				<img src="tower2.jpg" class="rotate90">
 			</div>
 			<div class="col-sm-3">
-				<h1 class="header">
-					test
-				</h1>
-				<img src="ben.jpg" class="rotate90">
-			</div>
-			<div class="col-sm-3">
-				<h1 class="header">
-					test
-				</h1>
 				<img src="olive.jpg" class="rotate90">
 			</div>
+			</div>
+		</div>
 
 
+		<div class="headers">
+				<h1 style="padding-top: 5%;padding-bottom: 0%">
+					And a Few More
+				</h1>
+			</div>
 
-	</div>
 
+		<div class="container center imglarger" style="padding-top: 3%">
+				<div class="row">
+					<div class="col-sm-4">
+						<img src="fear.jpg">
+					</div>
+					<div class="col-sm-4">
+						<img src="mori.jpg">
+					</div>
+					<div class="col-sm-4">
+						<img src="fear5.jpg">
+					</div>
+					</div>
+				</div>
 
+				<br>
+				<br>
+				<div class="bottom">
+					<br>
+					<span class="text-right">
+						No Rights Reserved
+					</span>
+					<span class="text-left">
+						In The Public Domain
+					</span>
+					<br>
+					<br>
+				</div>
 </body>
