--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Stuff For Jason</title>
 	<link rel="stylesheet" type="text/css" href="css.css">
-	<link rel="stylesheet" type="javascript" href="java.js">
+	<script src="javascript.js"></script>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -23,6 +23,7 @@
 		<ul class="nav navbar-nav">
 			<li><a href="games.html">Games</a></li>
 			<li><a href="images.html">Pictures</a></li>
+			<li><a href="time.html">Timer</a></li>
 			<li><a href="random.html">Random Stuff</a></li>
 			<li><a href="soon.html">Coming Soon!</a></li>
 		</ul>
