--- a/soon.html
+++ b/soon.html
@@ -23,6 +23,7 @@
 		<ul class="nav navbar-nav container-fluid">
 			<li><a href="games.html">Games</a></li>
 			<li><a href="images.html">Pictures</a></li>
+			<li><a href="time.html">Timer</a></li>
 			<li><a href="random.html">Random Stuff</a></li>
 			<li class="active"><a href="soon.html">Coming Soon!</a></li>
 		</ul>
